--- a/resume.css
+++ b/resume.css
@@ -66,6 +66,10 @@ li {
   display: none;
 }
 
+.col {
+  padding: 30px;
+}
+
 @media (max-width: 992px) {
   .navbar-toggler{
   display: inline;
@@ -74,6 +78,7 @@ li {
   .row {
     overflow-x: hidden;
   }
+
 
 }
 
@@ -146,8 +151,7 @@ table tr th{
   float: left;
   border-radius: 10%;
   width: 150px;
-  padding: 10px;
-  margin-right: 30px;
+  margin-right: 10px;
 }
 
 .personalinfo .col1 {
